Added support for editor-exposed WindVectorField asset with configurable parameters; removed hardcoded initialization

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -61,11 +61,18 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[SystemSettings]
+t.MaxFPS=240
+
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_ThirdPerson",NewGameName="/Script/EmberFlight")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_ThirdPerson",NewGameName="/Script/EmberFlight")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonGameMode",NewClassName="EmberFlightGameMode")
 +ActiveClassRedirects=(OldClassName="TP_ThirdPersonCharacter",NewClassName="EmberFlightCharacter")
+SmoothedFrameRateRange=(LowerBound=(Type=Inclusive,Value=22.000000),UpperBound=(Type=Inclusive,Value=240.000000))
+bSmoothFrameRate=False
+bUseFixedFrameRate=False
+FixedFrameRate=120.000000
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
