--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/PhoenixThirdPerson/Maps/Level_01.Level_01
+EditorStartupMap=/Game/PhoenixThirdPerson/Maps/Level_01.Level_01
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/BP_EmberFlight_GameMode.BP_EmberFlight_GameMode_C
 
 [/Script/Engine.RendererSettings]
@@ -21,6 +21,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.Substrate=False
+r.Lumen.HardwareRayTracing=True
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
