--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -21,7 +21,7 @@ r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
 
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 r.Substrate=False
-r.Lumen.HardwareRayTracing=True
+r.Lumen.HardwareRayTracing=False
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
