feat(niagara): Enable GPU simulation support for Wind Field data interface
Added full GPU simulation support to UNiagaraDataInterfaceWindField by implementing all necessary
per-instance game and render thread data flow, memory-safe copying, and shader parameter integration.

- Allocated and initialized `FNDIWindFieldProxy` in `PostInitProperties`, including registration for Niagara parameter support.
- Ensured render data updates are marked dirty on init.

- Implemented `PerInstanceTickPostSimulate` to convert and copy velocity data from UWindVectorField to a `TArray<FVector3f>` in `FNDIWindFieldInstanceData`.

- Overrode `PerInstanceDataPassedToRenderThreadSize()` to return `sizeof(FNDIWindFieldRenderData)`.
- In `ProvidePerInstanceDataForRenderThread`, used **placement new** to safely construct `FNDIWindFieldRenderData` in Niagara-allocated raw memory (`FMemory::Malloc`).
- Avoided heap allocation; instead relied on the memory block Niagara provides, using:
 .cpp:
   FNDIWindFieldRenderData* RenderData = new (DataForRenderThread) FNDIWindFieldRenderData();
- Copied metadata (origin, cell size, dimensions) and velocity grid from instance data into render data safely.
- Respected Niagara’s raw memory allocation expectations (no delete on placement new memory).

- Implemented `FNDIWindFieldProxy::ConsumePerInstanceDataFromGameThread` to copy render data from the game thread without triggering a crash (no delete).
- Stored per-instance render data in `SystemInstancesToProxyData` for later access.

- Implemented `PreStage` to upload velocity grid data into a `FRDGPooledBuffer`, readying it for GPU consumption.
- Populated `FNDIWindFieldShaderParameters` in `SetShaderParameters` using the uploaded RDG buffer and metadata from `SystemInstancesToProxyData`.

- Declared support for GPU execution by setting `Sig.bSupportsGPU = true` in function signatures.
- Added HLSL function generation and .ush inclusion via `AppendCompileHash`, `GetParameterDefinitionHLSL`, and `GetFunc

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -76,6 +76,8 @@ bSmoothFrameRate=False
 bUseFixedFrameRate=False
 FixedFrameRate=120.000000
 
+++AdditionalShaderDirectories=Shaders
+
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
