--- a/EmberFlight.uproject
+++ b/EmberFlight.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "WaterExtras",
 			"Enabled": true
+		},
+		{
+			"Name": "ExampleCustomDataInterface",
+			"Enabled": true
 		}
 	]
 }
