feat: Refactor WindField Niagara DI to double-buffered GPU simulation with direct RHI uploads
- Added per-instance data owner (FNDIWindFieldData) with double TArray<FVector4f> for CPU-side double buffering
- Implemented Write/Read buffer swapping in PerInstanceTick & PostSim for async data flow
- Reworked InitPerInstanceData to preallocate and initialize CPU buffers and GPU structured buffer
- Introduced FNDIWindFieldBuffer with InitRHI/ReleaseRHI for direct GPU uploads via LockBuffer
- Avoided per-frame memory copies by forwarding CPU buffer pointer to render thread
- Simplified ProvidePerInstanceDataForRenderThread and ConsumePerInstanceDataFromGameThread to avoid redundant allocations
- Added safety checks and logging for null instances, uninitialized buffers, and RHI creation failures
- Marked frames with bUploadQueuedThisFrame to track GPU buffer updates
- Reduced memory overhead by reusing CPU double buffer instead of reallocating VelocityGrid every frame
- Modernized shader parameter binding with FNiagaraRenderer::GetSrvOrDefaultFloat4()

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -149,3 +149,8 @@ ManualIPAddress=
 +CollisionChannelRedirects=(OldName="VehicleMovement",NewName="Vehicle")
 +CollisionChannelRedirects=(OldName="PawnMovement",NewName="Pawn")
 
+[/Script/RenderDocPlugin.RenderDocPluginSettings]
+renderdoc.AutoAttach=False
+renderdoc.ShowHelpOnStartup=False
+renderdoc.BinaryPath="\"C:\\Program Files\\RenderDoc\\qrenderdoc.exe\""
+
