--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 Content/** filter=lfs diff=lfs merge=lfs -text
+*.ucas filter=lfs diff=lfs merge=lfs -text
+*.utoc filter=lfs diff=lfs merge=lfs -text
+*.pak filter=lfs diff=lfs merge=lfs -text
